...
                        initialData: pb.player.state.playing,
                        builder: (context, s) => IconButton.filled(
                          icon: Icon(s.data! ? Icons.pause : Icons.play_arrow, semanticLabel: s.data! ? 'Pause' : 'Play'),
                          onPressed: s.data! ? pb.pause : pb.play,
                        ),
                      ),
                      IconButton(icon: const Icon(Icons.close, semanticLabel: 'Stop'), onPressed: pb.stop),
                    ]),
                  ),
                  _Progress(pb: pb),
                ]),
              ),
            ),
...
